# solana-pam

contract/cli/: Cargo.toml
contract/program/: Cargo.toml  package-lock.json  package.json  program_id.json
contract/program/scripts/: deploy-contract.sh  deploy.ts
contract/program/src/: instruction.rs  lib.rs  processor.rs
contract/solana-pam-shared/: Cargo.toml
contract/solana-pam-shared/src/: instructions.rs
pam-client/: package-lock.json  package.json  tsconfig.json
pam-client/src/: connect.ts  contract.ts  main.ts
rust-cli/: Cargo.toml  README  justfile  test.c
rust-cli/src/: main.rs
rust-pam/: Cargo.toml  README  build-test.sh  build.sh  pam_test
rust-pam/src/: lib.rs  solana.rs
rust-pam/src/contract/: processor.rs
