[package]
name = "rust-cli"
version = "0.1.0"
authors = ["Lev Stambler <levstamb@gmail.com>"]
edition = "2018"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pam = "0.7.0"
rand = "0.8.3"

# [lib]
# name = "pam_sol"
# crate-type = ["cdylib"]
[target.x86_64-unknown-linux-gnu]
linker = "x86_64-linux-gnu-gcc"
