[package]
name = "contract-pam"
version = "3.0.1"
description = "Solana Program Library Memo"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.0"
hex = "0.4.3"
hex-slice = "0.1.4"
num-derive = "0.3.3"
num-traits = "0.2.14"
solana-program = "1.6.7"

[dev-dependencies]
solana-program-test = "1.6.7"
solana-sdk = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
