[package]
name = "solana-pam-shared"
version = "0.1.0"
authors = ["Lev Stambler <levstamb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.0"
solana-program = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]

[features]
test-bpf = []

[dev-dependencies]
solana-program-test = "1.6.7"
solana-sdk = "1.6.7"

